--- a/style.css
+++ b/style.css
@@ -9,12 +9,8 @@
 body {
   font-family: Arial, sans-serif;
   color: #333;
-  background-color: red; /* Red background */
-  background-image: url('https://i.postimg.cc/wj1r6jyZ/Screenshot-490.png');
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
+  background-color: red; /* Plain red background */
+  background-repeat: no-repeat; /* Remove any repeat for image if it was set previously */
 }
 
 /* Header Section */
